# internal/handler/ai/router.handler.go
@@ -1,0 +1,8 @@
+package ai
+
+import "github.com/gin-gonic/gin"
+
+func (h *Handler) NewRoutes(e *gin.RouterGroup) {
+	group := e.Group("/ai")
+	group.POST("/cashflow/text", h.InputTextCashflow)
+}
